[package]
name = "maven-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
quick-xml = { version = "0.38.1", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
dirs = "6.0.0"
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
async-recursion = "1.1"
regex = "1.11.1"
